// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`composeDown > should omit -f when file is empty 1`] = `
[
  "docker",
  [
    "compose",
    "down",
    "--remove-orphans",
    "--volumes",
  ],
  {
    "stdio": [
      "ignore",
      "ignore",
      "inherit",
    ],
  },
]
`;

exports[`composeDown > should spawn with correct args 1`] = `
[
  "docker",
  [
    "compose",
    "-f",
    "/path/compose.yml",
    "down",
    "--remove-orphans",
    "--volumes",
  ],
  {
    "stdio": [
      "ignore",
      "ignore",
      "inherit",
    ],
  },
]
`;

exports[`composeDown should omit -f when file is empty 1`] = `
[
  "docker",
  [
    "compose",
    "down",
    "--remove-orphans",
    "--volumes",
  ],
  {
    "stdio": [
      "ignore",
      "ignore",
      "inherit",
    ],
  },
]
`;

exports[`composeDown should spawn with correct args 1`] = `
[
  "docker",
  [
    "compose",
    "-f",
    "/path/compose.yml",
    "down",
    "--remove-orphans",
    "--volumes",
  ],
  {
    "stdio": [
      "ignore",
      "ignore",
      "inherit",
    ],
  },
]
`;
